# monorepo

./: .daggerignore  .gitignore  MONOREPO.md  README.md  WARP.md  justfile
Goonlytics/: Project.swift  (+1 more)
applications/thiccc/: .gitignore  AUTOMATIC-WORKFLOW-SETUP.md  BUILD-INSTRUCTIONS.md  Cargo.toml  MIGRATION-STATUS.md  Makefile  Mintfile  NEXT-STEPS.md  QUERY-OPTIMIZATION.md  QUICKSTART.md  README.md  SETUP.md  UNIFFI-MIGRATION.md  UNIFFI-SUMMARY.md  XCFRAMEWORK-SETUP.md  XCODE-SETUP.md  justfile  railway.toml  rust-toolchain.toml  setup-mac.sh
applications/thiccc/.cursor/rules/: agent-workflow.mdc  clerk-nextjs.mdc  context.mdc  rust-coverage.mdc  shared-crate.mdc  swift-ios.mdc
applications/thiccc/.devcontainer/: Dockerfile.dev  devcontainer.json
applications/thiccc/api_server/: Cargo.toml  Dockerfile
applications/thiccc/api_server/src/: main.rs
applications/thiccc/app/: .gitignore  Cargo.toml  DEPLOYMENT-INDEX.md  Makefile  PRIVACY-POLICY-TEMPLATE.md  README.md  TESTFLIGHT-FLOWCHART.md  TESTFLIGHT-GUIDE.md  TESTFLIGHT-QUICKSTART.md  UPGRADE-NOTES.md
applications/thiccc/app/ios/: ARCHITECTURE.md  BUILD-RUST.md  CREATE-XCODE-PROJECT.md  README.md  SETUP-COMPLETE.md  XCODE-PROJECT-FIXED.md  generate-xcode-project.sh  project.yml
applications/thiccc/app/ios/Thiccc/: AddExerciseView.swift  ContentView.swift  DatabaseInspectorView.swift  DebugCapabilitiesView.swift  ExerciseSection.swift  HistoryDetailView.swift  HistoryView.swift  ImportWorkoutView.swift  SetRow.swift  ThicccApp.swift  WorkoutDetailView.swift  WorkoutView.swift  core.swift
applications/thiccc/app/ios/Thiccc.xcodeproj/: project.pbxproj
applications/thiccc/app/ios/thiccc/: ContentView.swift  Core.swift  ThicccApp.swift
applications/thiccc/app/ios/thiccc.xcodeproj/: project.pbxproj
applications/thiccc/app/old_ios/: project.yml
applications/thiccc/app/old_shared/: Cargo.toml
applications/thiccc/app/shared/: Cargo.toml  README.md  build-ios.sh  build-xcframework.sh  build.rs  cbindgen.toml  shared.h  uniffi.toml
applications/thiccc/app/shared_types/: Cargo.toml  build.rs
applications/thiccc/db/: README.md
applications/thiccc/db/migrations/: 20250125000001_create_users.sql
applications/thiccc/docs/: ADD-GRDB-DEPENDENCY.md  ADDING-FEATURES-GUIDE.md  AGENT-DEVELOPMENT.md  AGENT-QUICK-REF.md  ARCHITECTURE.md  DATABASE-VERIFICATION-DEBUG-TAB.md  DEPLOYMENT-INDEX.md  PHASE-9-IMPLEMENTATION.md  PHASE-9-MANUAL-TESTING.md  PHASE-9-SUMMARY.md  QUICKSTART.md  SERIALIZATION-BEST-PRACTICES.md  SETUP.md  SHARED-CRATE-MAP.md  STRUCTURE.md  SUMMARY-VERIFICATION-IMPROVEMENTS.md  TESTFLIGHT-GUIDE.md  TESTFLIGHT-QUICKSTART.md  VERIFICATION-QUICK-START.md
applications/thiccc/docs/code_migration_plans/: 01-EXTRACT-TESTS.md  02-EXTRACT-TYPES.md  03-SPLIT-UPDATE-LOGIC.md  README.md
applications/thiccc/docs/feature_migration_plans/: 00-OVERVIEW.md  01-PHASE-1-DATA-MODELS.md  02-PHASE-2-EVENTS-STATE.md  03-PHASE-3-CAPABILITIES.md  04-PHASE-4-BUSINESS-LOGIC.md  05-PHASE-5-NAVIGATION.md  06-PHASE-6-WORKOUT-VIEW.md  07-PHASE-7-HISTORY-VIEWS.md  08-PHASE-8-ADDITIONAL-FEATURES.md  09-PHASE-9-DATABASE.md  10-PHASE-10-ADDITIONAL-LOGIC.md  11-PHASE-11-POLISH.md  12-PHASE-12-OPTIONAL.md  AGENT-PROMPT-TEMPLATES.md  README.md
applications/thiccc/docs/future_projects/: README.md  development-workflow.md  simagent-ios-automation.md
applications/thiccc/docs/testing_strategies/: COVERAGE-QUICK-START.md  README.md  maestro.md  xctest-ui-tests.md
applications/thiccc/docs/web/: 00-OVERVIEW.md  01-PHASE-1-SETUP.md  02-PHASE-2-AUTH.md  03-PHASE-3-CORE-API.md  04-PHASE-4-ADMIN-DEBUG.md  05-PHASE-5-WORKOUTS.md  06-10-REMAINING-PHASES.md  README.md
applications/thiccc/ios/: .mintignore
applications/thiccc/ios/Thiccc/: AddExerciseView.swift  DatabaseInspectorView.swift  DebugCapabilitiesView.swift  HistoryDetailView.swift  SetRow.swift  ThicccApp.swift  WorkoutDetailView.swift  core.swift
applications/thiccc/scripts/: verify-ios-build.sh  verify-rust-core.sh
applications/thiccc/shared/: Cargo.toml  build-ios.sh  uniffi.toml
applications/thiccc/shared_types/: Cargo.toml  build.rs
applications/thiccc/shared_types/src/: lib.rs
applications/thiccc/web_frontend/: package-lock.json  package.json  tsconfig.json
applications/thiccc/web_frontend/app/: globals.css  layout.tsx  page.tsx
(+237 files in other folders)
