# /Cargo.toml
[workspace]
members = ["shared", "shared_types", "api_server"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.95"
crux_core = "=0.16.1"
serde = "1.0.217"

[workspace.metadata.bin]
cargo-xcode = { version = "=1.7.0" }
