[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]
name = "shared"

[dependencies]
crux_core = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }

[target.'cfg(target_os = "ios")'.dependencies]
# iOS specific dependencies can go here if needed

